--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.83.1",
+    "@supabase/supabase-js": "^2.95.3",
     "react": "19.2.0",
     "react-native": "0.83.1",
-    "@react-native/new-app-screen": "0.83.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
